--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>ToDo List</title>
+    <title>Todo List</title>
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
